# git-extras

./: .gitignore  Makefile.am  README.md  bootstrap.sh  configure.ac
build-aux/: git-version-gen
man/: git-nuke.1
scripts/: .gitignore  git-nuke.sh
